data/derived/comb/progs/unify/prog0750.ml.out
Characters 84-121:
  else if n > 0 then digitsOfInt (n / 10) @ (n mod 10)::[];;
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type unit
